Hover na telefonima

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
 }
+
+@media (hover: none) {
+  *:hover {
+    all: unset;
+  }
+}
