--- a/src/pages/home/ContactSection.css
+++ b/src/pages/home/ContactSection.css
@@ -1,7 +1,7 @@
 .contact {
   width: 100%;
-  height: 395px;
 
+  padding: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,6 +17,8 @@
   box-shadow:
     0 -5px 40px rgba(0, 0, 0, 0.1),
     0 5px 40px rgba(0, 0, 0, 0.1);
+
+  cursor: default;
 }
 
 .contact__text {
@@ -26,20 +28,20 @@
 }
 
 .contact__phone {
-  font-size: 90px;
+  font-size: 80px;
   font-weight: 800;
-  margin: -10px 0;
+  margin: -20px 0;
   transition: transform 0.3s ease;
 }
 
 .contact__phone:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .contact__socials {
   display: flex;
-  gap: 10px;
-  margin-top: 20px;
+  gap: 20px;
+  margin-top: 15px;
 }
 
 .contact__socials img {
