--- a/src/pages/home/HeroSection.css
+++ b/src/pages/home/HeroSection.css
@@ -1,6 +1,6 @@
 .hero {
   width: 100%;
-  min-height: 60vh;
+  padding-top: 60px;
 
   position: relative;
   overflow: hidden;
@@ -9,8 +9,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  padding-top: 70px;
 
   background: linear-gradient(120deg, #ffb60f, #ffd94d, #ffb60f);
   background-size: 300% 300%;
@@ -23,8 +21,11 @@
   100% { background-position: 0% 50%; }
 }
 
+/* LOGO */
+
 .hero__logo-wrapper {
-  padding-bottom: 30px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   z-index: 10;
   animation: hero-slide-in 1s ease-out forwards;
 }
@@ -34,8 +35,10 @@
   transition: transform 0.3s ease;
 }
 
-.hero__logo:hover {
-  transform: scale(1.12);
+@media (hover: hover) {
+  .hero__logo:hover {
+    transform: scale(1.12);
+  }
 }
 
 @keyframes hero-slide-in {
@@ -49,28 +52,12 @@
   }
 }
 
+/* CTA */
+
 .hero__cta {
   z-index: 10;
   animation: hero-slide-up 1s ease-out forwards;
-}
-
-.hero__button {
-  padding: 10px 40px;
-  background: linear-gradient(to right, #ffee9f, #fdf1b8);
-
-  font-size: 25px;
-  font-weight: 700;
-
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.hero__button:hover {
-  transform: scale(1.05);
+  padding-bottom: 40px;
 }
 
 @keyframes hero-slide-up {
@@ -84,32 +71,37 @@
   }
 }
 
+/* SEARCH */
+
 .hero__search {
   display: flex;
   align-items: center;
+
+  width: 420px;
+  padding: 5px 10px;
+
   background: linear-gradient(to right, #ffee9f, #fdf1b8);
   border-radius: 30px;
-  padding: 5px 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  width: 420px;
 }
 
 .hero__search-pin {
   width: 25px;
   height: 25px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 0 10px;
   opacity: 0.85;
 }
 
 .hero__search-input {
   flex: 1;
+  padding: 10px 5px;
+
   border: none;
   background: transparent;
+  outline: none;
+
   font-size: 20px;
   font-weight: 500;
-  outline: none;
-  padding: 10px 5px;
 }
 
 .hero__search-input::placeholder {
@@ -117,22 +109,28 @@
 }
 
 .hero__search-button {
-  background: #ffd94d;
-  border: none;
-  border-radius: 50%;
   width: 38px;
   height: 38px;
-  cursor: pointer;
+
+  border: none;
+  border-radius: 50%;
   padding: 0;
+
+  background: #ffd94d;
+  cursor: pointer;
+
   display: flex;
   align-items: center;
   justify-content: center;
+
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-.hero__search-button:hover {
-  transform: scale(1.1);
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+@media (hover: hover) {
+  .hero__search-button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+  }
 }
 
 .hero__search-magnifier {
