--- a/src/components/auth-modal/AuthModal.css
+++ b/src/components/auth-modal/AuthModal.css
@@ -15,16 +15,16 @@
 /* ================= MODAL ================= */
 
 .auth-modal {
-  background: #ffee9f; /* soft žuta box */
-  width: 92%;
-  max-width: 420px;
-  padding: 30px;
+  background: #ffeea0; /* soft žuta box */
+  width: 100%;
+  max-width: 800px;
+  padding: 70px;
 
   border-radius: 28px;
   position: relative;
   z-index: 100000;
 
-  box-shadow: 0 40px 100px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 40px 100px rgba(0, 0, 0, 0.15);
   animation: modalIn 0.35s ease;
 }
 
@@ -43,8 +43,8 @@
 
 .auth-close {
   position: absolute;
-  top: 18px;
-  right: 20px;
+  top: 30px;
+  right: 30px;
 
   background: none;
   border: none;
@@ -66,19 +66,19 @@
 }
 
 .auth-avatar {
-  width: 64px;
-  height: 64px;
+  width: 70px;
+  height: 70px;
   margin: 0 auto 12px;
 
   border-radius: 50%;
   background: #142127;
-  color: #fdf1b8;
+  color: #ffeea0;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
-  font-size: 28px;
+  font-size: 32px;
 }
 
 /* ================= TABS ================= */
@@ -87,7 +87,7 @@
   display: flex;
   position: relative;
 
-  background: #fdf1b8;
+  background: #fff6c9;
   border-radius: 999px;
   margin-bottom: 22px;
 }
@@ -101,8 +101,8 @@
   cursor: pointer;
   z-index: 2;
 
-  color: #fdf1b8;
-  opacity: 0.6;
+  color: #fff6c9;
+  opacity: 0.7;
 }
 
 .auth-tab.active {
