--- a/src/components/floating-icons/FloatingIcons.css
+++ b/src/components/floating-icons/FloatingIcons.css
@@ -11,6 +11,7 @@
   animation-name: floatY;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
+  will-change: transform;
 }
 
 @keyframes floatY {
