--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -8,7 +8,7 @@ footer {
   color: var(--brand-neutral);
   font-size: 14px;
   font-weight: 400;
-  height: 64px;
+  height: 7vh;
   display: flex;
   align-items: center;
   justify-content: center;
