--- a/src/pages/home/HeroSection.css
+++ b/src/pages/home/HeroSection.css
@@ -1,6 +1,6 @@
 .hero {
   position: relative;
-  min-height: 70vh;
+  min-height: 93vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -93,25 +93,11 @@
   opacity: 0.4;
 }
 
-.home__next {
-  min-height: 30vh;
-  background-color: var(--brand-neutral);
-}
-
 .pac-container {
   z-index: 99999 !important;
 }
 
-/* ===============================
-   TEMP MOBILE OVERRIDE (TEST)
-   može slobodno da se obriše
-   =============================== */
 @media (max-width: 480px) {
-  .hero {
-    min-height: 100vh;
-    padding-inline: 16px;
-  }
-
   .hero__logo {
     width: 110px;
     height: 110px;
@@ -144,10 +130,6 @@
     font-size: 16px;
     padding-block: 12px;
     padding-right: 14px;
-    padding-left: 0px;
-  }
-
-  .home__next {
-  min-height: 0vh;
+    padding-left: 0;
   }
 }
